--- a/index.html
+++ b/index.html
@@ -1,1 +1,175 @@
-<p>hello</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="globals.css" />
+        <link rel="stylesheet" href="styleguide.css" />
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <div class="desktop">
+            <div class="div">
+                <header class="header">
+                    <div class="navbar">
+                        <div class="text-wrapper">Home</div>
+                        <div class="text-wrapper-2">About</div>
+                        <div class="text-wrapper-3">Projects</div>
+                        <div class="text-wrapper-4">Skills</div>
+                        <div class="contact">Contact</div>
+                    </div>
+                </header>
+                <div class="hero">
+                    <div class="overlap">
+                        <img class="IMG" src="IMG-20241211-181414-1.png" />
+                        <div class="hi-i-am-eswar-charan">Hi,i Am<br />eswar Charan</div>
+                        <p class="btech-student">
+                            Btech Student | Aspiring Software Engineer <br />tech Enthusiast | Aspiring Full-stack Developer
+                        </p>
+                        <div class="overlap-group"><div class="download-resume">DOWNLOAD RESUME</div></div>
+                        <div class="download-resume-wrapper"><div class="download-resume-2">DOWNLOAD RESUME</div></div>
+                    </div>
+                </div>
+                <div class="about-me">
+                    <div class="text-wrapper-5">About Me</div>
+                    <p class="i-am-a-btech-student">
+                        I Am A Btech Student Specializing In Computer Science At Maharaj Vijayaram Gajapathi Raj College Of
+                        Engineering (mvgrce).&nbsp;&nbsp;I Am Passionate About Web Development, Machine Learning And Enjoy
+                        Solving&nbsp;&nbsp;Real-world Problems Using Technology. My Goal Is To&nbsp;&nbsp;Become A Software Engineer
+                        At A Leading Tech Company
+                    </p>
+                </div>
+                <div class="projects">
+                    <div class="group">
+                        <div class="overlap-group-2">
+                            <p class="AI-chatbot-python">Ai Chatbot<br />python-based Chatbot Using Nlp And Tensorflow.</p>
+                            <div class="overlap-2">
+                                <img class="github" src="github-6980894-960-720-1-3.png" />
+                                <div class="code">Code</div>
+                            </div>
+                            <div class="div-wrapper"><div class="text-wrapper-6">Demo</div></div>
+                            <div class="porject">Porject_2</div>
+                        </div>
+                    </div>
+                    <div class="overlap-wrapper">
+                        <div class="overlap-group-2">
+                            <p class="e-commerce-platform">
+                                E-commerce Platform<br />built With React, Node.js, And Mongodb. Includes Payment Gateway Integration.
+                            </p>
+                            <div class="overlap-group-3">
+                                <img class="github" src="github-6980894-960-720-1.png" />
+                                <div class="code">Code</div>
+                            </div>
+                            <div class="overlap-3"><div class="text-wrapper-6">Demo</div></div>
+                            <div class="porject-2">Porject_1</div>
+                        </div>
+                    </div>
+                    <div class="text-wrapper-5">Featured Projects</div>
+                </div>
+                <div class="skils">
+                    <div class="frame">
+                        <img class="html" src="html.png" />
+                        <div class="html-2">Html</div>
+                    </div>
+                    <div class="frame-2">
+                        <img class="css" src="css.png" />
+                        <div class="css-2">Css</div>
+                    </div>
+                    <div class="frame-3">
+                        <img class="js" src="js.png" />
+                        <div class="js-2">Js</div>
+                    </div>
+                    <div class="frame-4">
+                        <img class="c" src="c.png" />
+                        <div class="c-2">C</div>
+                    </div>
+                    <div class="frame-5">
+                        <img class="img" src="c+.png" />
+                        <div class="c-3">C++</div>
+                    </div>
+                    <div class="frame-6">
+                        <img class="img" src="pythom.png" />
+                        <div class="python">Python</div>
+                    </div>
+                    <div class="text-wrapper-7">Technical Skills</div>
+                </div>
+                <div class="internships-work">Internships &amp; Work Experience</div>
+                <div class="achievements">
+                    <div class="nyd">
+                        <a
+                            href="https://drive.google.com/file/d/1-nKJCVnE6Mxj4h3pfQG82oZbKAZNu4IR/view?usp=drive_link"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            ><div class="certificate">
+                                <div class="overlap-group-4">
+                                    <div class="rectangle"></div>
+                                    <div class="certificate-2">Certificate</div>
+                                </div>
+                            </div></a
+                        >
+                        <img class="screenshot" src="screenshot-2025-02-09-175636-1.png" />
+                        <p class="competed-in-the-NYD">
+                            <br />competed In The Nyd Hackathon 2024, Showcasing Innovative Problem-solving Skills.<br />developed A
+                            Project Focused On Chatbot Base On Bhagavad Gita<br />worked With A Team Using Rag,llama To Build A
+                            Working Prototype.<br />presented The Solution To Industry Experts And Received Valuable Feeddf Agback.
+                        </p>
+                        <div class="NYD-hackathon">Nyd Hackathon 2024 ✨</div>
+                    </div>
+                    <div class="sih">
+                        <div class="overlap-4">
+                            <div class="overlap-5">
+                                <p class="p">🏆 Smart India Hackathon 2024 – Grand Finale Participant</p>
+                                <img class="IMG-2" src="IMG-20241213-064511-1.png" />
+                            </div>
+                            <p class="selected-for-the">
+                                Selected For The Grand Finale Of Smart India Hackathon 2024 (software Edition).<br />recognized For
+                                Innovative Problem-solving And Technical Expertise.<br />presented A Solution For 3d Locations Of
+                                Soldiers Using Unity.<br />organized By The Ministry Of Education, Aicte, And Weschool.
+                            </p>
+                            <a
+                                href="https://drive.google.com/file/d/1TfvaKUmCa3qFN4-SggAJ2vnMPIJG9vNW/view?usp=drive_link"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                ><div class="overlap-group-wrapper">
+                                    <div class="overlap-group-4">
+                                        <div class="rectangle"></div>
+                                        <div class="certificate-2">Certificate</div>
+                                    </div>
+                                </div></a
+                            >
+                        </div>
+                    </div>
+                    <div class="achievements-awards">Achievements &amp; Awards</div>
+                </div>
+                <footer class="footer">
+                    <div class="overlap-6">
+                        <div class="let-s-work-together"><br />let&#39;s Work Together</div>
+                        <div class="text-wrapper-8">Contact Me</div>
+                    </div>
+                    <div class="overlap-7">
+                        <div class="text-wrapper-9">copyright</div>
+                        <p class="element-designed-by">
+                            <span class="span">2025,</span> <span class="span">designed by eswar</span>
+                        </p>
+                        <img class="copyrightlogo" src="copyrightlogo-1.png" />
+                    </div>
+                    <a
+                        href="https://www.linkedin.com/in/eswarcharan?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        ><img
+                            class="linkedin-clipart-hd"
+                            src="linkedin-clipart-hd-PNG-linkedin-icon-linkedin-icons-black-linkedin-logo-linkedin-logo-PNG-image-for-free-download-1.png"
+                    /></a>
+                    <a href="https://github.com/eswarcharan05" target="_blank" rel="noopener noreferrer"
+                        ><img class="github-2" src="github-6980894-960-720-1-2.png"
+                    /></a>
+                    <img class="image" src="image-1.png" />
+                    <img class="pngegg" src="pngegg-1.png" />
+                    <div class="text-wrapper-10">+91 7207796528</div>
+                    <div class="text-wrapper-11">eswarcharan0523@gmail.com</div>
+                </footer>
+            </div>
+        </div>
+    </body>
+</html>
