--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </header>
                 <div class="hero">
                     <div class="overlap">
-                        <img class="IMG" src="IMG-20241211-181414-1.png" />
+                        <img class="IMG" src="img/IMG-20241211-181414-1.png" />
                         <div class="hi-i-am-eswar-charan">Hi,i Am<br />eswar Charan</div>
                         <p class="btech-student">
                             Btech Student | Aspiring Software Engineer <br />tech Enthusiast | Aspiring Full-stack Developer
@@ -44,7 +44,7 @@
                         <div class="overlap-group-2">
                             <p class="AI-chatbot-python">Ai Chatbot<br />python-based Chatbot Using Nlp And Tensorflow.</p>
                             <div class="overlap-2">
-                                <img class="github" src="github-6980894-960-720-1-3.png" />
+                                <img class="github" src="img/github-6980894-960-720-1-3.png" />
                                 <div class="code">Code</div>
                             </div>
                             <div class="div-wrapper"><div class="text-wrapper-6">Demo</div></div>
@@ -57,7 +57,7 @@
                                 E-commerce Platform<br />built With React, Node.js, And Mongodb. Includes Payment Gateway Integration.
                             </p>
                             <div class="overlap-group-3">
-                                <img class="github" src="github-6980894-960-720-1.png" />
+                                <img class="github" src="img/github-6980894-960-720-1.png" />
                                 <div class="code">Code</div>
                             </div>
                             <div class="overlap-3"><div class="text-wrapper-6">Demo</div></div>
@@ -68,27 +68,27 @@
                 </div>
                 <div class="skils">
                     <div class="frame">
-                        <img class="html" src="html.png" />
+                        <img class="html" src="img/html.png" />
                         <div class="html-2">Html</div>
                     </div>
                     <div class="frame-2">
-                        <img class="css" src="css.png" />
+                        <img class="css" src="img/css.png" />
                         <div class="css-2">Css</div>
                     </div>
                     <div class="frame-3">
-                        <img class="js" src="js.png" />
+                        <img class="js" src="img/js.png" />
                         <div class="js-2">Js</div>
                     </div>
                     <div class="frame-4">
-                        <img class="c" src="c.png" />
+                        <img class="c" src="img/c.png" />
                         <div class="c-2">C</div>
                     </div>
                     <div class="frame-5">
-                        <img class="img" src="c+.png" />
+                        <img class="img" src="img/c+.png" />
                         <div class="c-3">C++</div>
                     </div>
                     <div class="frame-6">
-                        <img class="img" src="pythom.png" />
+                        <img class="img" src="img/pythom.png" />
                         <div class="python">Python</div>
                     </div>
                     <div class="text-wrapper-7">Technical Skills</div>
@@ -107,7 +107,7 @@
                                 </div>
                             </div></a
                         >
-                        <img class="screenshot" src="screenshot-2025-02-09-175636-1.png" />
+                        <img class="screenshot" src="img/screenshot-2025-02-09-175636-1.png" />
                         <p class="competed-in-the-NYD">
                             <br />competed In The Nyd Hackathon 2024, Showcasing Innovative Problem-solving Skills.<br />developed A
                             Project Focused On Chatbot Base On Bhagavad Gita<br />worked With A Team Using Rag,llama To Build A
@@ -119,7 +119,7 @@
                         <div class="overlap-4">
                             <div class="overlap-5">
                                 <p class="p">🏆 Smart India Hackathon 2024 – Grand Finale Participant</p>
-                                <img class="IMG-2" src="IMG-20241213-064511-1.png" />
+                                <img class="IMG-2" src="img/IMG-20241213-064511-1.png" />
                             </div>
                             <p class="selected-for-the">
                                 Selected For The Grand Finale Of Smart India Hackathon 2024 (software Edition).<br />recognized For
@@ -151,7 +151,7 @@
                         <p class="element-designed-by">
                             <span class="span">2025,</span> <span class="span">designed by eswar</span>
                         </p>
-                        <img class="copyrightlogo" src="copyrightlogo-1.png" />
+                        <img class="copyrightlogo" src="img/copyrightlogo-1.png" />
                     </div>
                     <a
                         href="https://www.linkedin.com/in/eswarcharan?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
@@ -159,13 +159,13 @@
                         rel="noopener noreferrer"
                         ><img
                             class="linkedin-clipart-hd"
-                            src="linkedin-clipart-hd-PNG-linkedin-icon-linkedin-icons-black-linkedin-logo-linkedin-logo-PNG-image-for-free-download-1.png"
+                            src="img/linkedin-clipart-hd-PNG-linkedin-icon-linkedin-icons-black-linkedin-logo-linkedin-logo-PNG-image-for-free-download-1.png"
                     /></a>
                     <a href="https://github.com/eswarcharan05" target="_blank" rel="noopener noreferrer"
-                        ><img class="github-2" src="github-6980894-960-720-1-2.png"
+                        ><img class="github-2" src="img/github-6980894-960-720-1-2.png"
                     /></a>
-                    <img class="image" src="image-1.png" />
-                    <img class="pngegg" src="pngegg-1.png" />
+                    <img class="image" src="img/image-1.png" />
+                    <img class="pngegg" src="img/pngegg-1.png" />
                     <div class="text-wrapper-10">+91 7207796528</div>
                     <div class="text-wrapper-11">eswarcharan0523@gmail.com</div>
                 </footer>
